--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(ProjetoED C)
 set(CMAKE_C_STANDARD 99)
 
 aux_source_directory(geometros GEO)
-add_executable(ProjetoED main.c ${GEO} geometros/retangulo.c geometros/retangulo.h)
+aux_source_directory(arvores ARV)
+add_executable(ProjetoED main.c ${GEO} ${ARV})
 target_link_libraries(ProjetoED m)
